# Navigating-the-Noise-of-Online-Hotel-Reviews

./: README.md  calculate_data_statistics.py
BookingHotelsReviewsScraper/: background.js  content.js  manifest.json  popup.html  popup.js  pyproject.toml  styles.css
data/: reviews_Akgun_Istanbul_Hotel.csv  reviews_Alexis_Hotel_&_Banquets_Dallas_Park_Central_Galleria.csv  reviews_Avenue_Hostel.csv  reviews_Baiyoke_Sky_Hotel.csv  reviews_Belltown_Inn.csv  reviews_Belmont_Hotel_Manila.csv  reviews_Calafate_Hostel.csv  reviews_Camino_Real_Aeropuerto.csv  reviews_Carlton_Hotel_Bangkok_Sukhumvit.csv  reviews_Citybox_Bergen_Danmarksplass.csv  reviews_Club_Quarters_Hotel_Downton,_Houston.csv  reviews_Comfort_Hotel_Vesterbro.csv  reviews_Comfort_Inn_&_Suites_Miami_International_Airport.csv  reviews_Costa_del_Sol_Wyndham_Lima_Airport.csv  reviews_Courtland_Grand_Hotel,_Trademark_Collection_by_Wyndham_former_Sheraton_Atlanta.csv  reviews_Crowne_Plaza_Changi_Airport,_an_IHG_Hotel.csv  reviews_Daisy_Hotel.csv  reviews_Days_Inn_by_Wyndham_Miami_Airport_North.csv  reviews_Executives_Hotel_-_Olaya.csv  reviews_Generator_London.csv  reviews_Generator_Madrid.csv  reviews_Golden_Tulip_Dar_Es_Salaam_City_Center_Hotel.csv  reviews_Great_Southern_Hotel_Perth.csv  reviews_HI_Chicago_Hostel.csv  reviews_Handlery_Union_Square_Hotel.csv  reviews_Hilton_Garden_Inn_Bucharest_Old_Town.csv  reviews_Hilton_Garden_Inn_Philadelphia_Center_City.csv  reviews_Holiday_Inn_Express_Beijing_Dongzhimen,_an_IHG_Hotel.csv  reviews_Hotel_Boss.csv  reviews_Hotel_Central.csv  reviews_Hotel_Habitel_Select.csv  (+34 more)
(+149 files in other folders)
